<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light">

    <ImageView
        android:id="@+id/Imagemfundo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="center"
        android:src="@drawable/ecomoney" />

    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="386dp"

        android:layout_centerInParent="true"
        android:layout_weight="90"
        android:background="#D8000000"
        android:padding="20dp">

        <TextView
            android:id="@+id/txvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Faça o Login"
            android:textColor="@android:color/background_light"
            android:textSize="32dp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="96dp"
            android:ems="20"
            android:hint="@string/email"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />


        <EditText
            android:id="@+id/edtPass"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="145dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textColorLink="@android:color/background_light" />

        <CheckBox
            android:id="@+id/ckbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/edtEmail"
            android:layout_marginBottom="86dp"
            android:text="@string/rememner"
            android:textColor="@android:color/background_light"
            />

        <TextView
            android:id="@+id/txvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/edtEmail"
            android:layout_marginBottom="92dp"
            android:layout_marginLeft="168dp"
            android:text="@string/register"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="245dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:background="@color/coloarButtonLogin"
            android:text="@string/login" />
    </RelativeLayout>




</RelativeLayout>
