<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.ecomoney.ecomoney.SettingsFragment">


    <ImageView
        android:id="@+id/Imagemfundo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="center"
        android:src="@drawable/ecomoney"
        />

    <RelativeLayout
        android:id="@+id/relativeRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="90"
        android:background="#D8000000">

        <TextView
            android:id="@+id/txvNewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Editar Cadastro"
            android:textColor="@android:color/background_light"
            android:textSize="32dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imgvPhoto"
                android:layout_width="76dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnGetPhoto"
                android:layout_width="245dp"
                android:layout_height="40dp"
                android:layout_below="@+id/imgvPhoto"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:background="@color/coloarButtonLogin"
                android:text="@string/getPhoto" />


        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="110dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >


                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="75dp"
                    android:hint="@string/name"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light" />

                <EditText
                    android:id="@+id/edtCpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edtName"
                    android:layout_marginTop="10dp"
                    android:hint="@string/cpf"
                    android:inputType="number"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light" />


                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edtCpf"
                    android:layout_marginTop="10dp"
                    android:ems="20"
                    android:hint="@string/email"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light" />


                <EditText
                    android:id="@+id/edtPass"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/edtEmail"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@android:color/background_light" />

                <EditText
                    android:id="@+id/edtConfrPass"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/edtPass"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/confrpassword"
                    android:inputType="textPassword"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@android:color/background_light" />

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/edtConfrPass"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/address"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@android:color/background_light" />

                <EditText
                    android:id="@+id/edtCountry"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/edtAddress"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/coutry"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@android:color/background_light" />

                <EditText
                    android:id="@+id/edtCity"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/edtCountry"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/city"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@android:color/background_light" />

                <EditText
                    android:id="@+id/edtCEP"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/edtCity"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/cep"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@android:color/background_light" />


                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="245dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/edtCEP"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:background="@color/coloarButtonLogin"
                    android:text="@string/save" />

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/btnRegister"/>
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

</FrameLayout>
